--- a/hamsterball.html
+++ b/hamsterball.html
@@ -39,13 +39,11 @@ varying vec2 vTextureCoord;
 
 varying vec3 vLightWeighting;
 
-uniform float uAlpha;
-
 uniform sampler2D uSampler;
 
 void main(void) {
 	vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t), -1.0);
-    gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a * uAlpha);
+    gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a);
 }
 </script>
 
