--- a/hamsterball.html
+++ b/hamsterball.html
@@ -97,19 +97,19 @@ Your browser does not appear to support HTML canvas.
 <table width="90%">
 <tr>
 <td width="33%" align="center">
-rotation X
+speed X
 <br>
-<span id="rotationXText">0.0000</span>
+<span id="speedVelText">0.0000</span>
 </td>
 <td width="34%" align="center">
-rotation Y
+speed Y
 <br>
-<span id="rotationYText">0.0000</span>
+<span id="speedDirText">0.0000</span>
 </td>
 <td width="33%" align="center">
-rotation Z
+other
 <br>
-<span id="rotationZText">0.0000</span>
+<span id="otherText">0.0000</span>
 </td>
 </tr>
 </table>
